# quant-research-os

./: .gitignore  AGENTS.md  README.md  README_EN.md  RELEASE_NOTES.md  pyproject.toml  setup  tmp.md  todo.md
.claude/: INSTALL.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
contracts/: AGENTS.md
docs/: AGENTS.md  README.codex.md  README.md  SUMMARY.md  anti_drift_baseline_promotion_protocol.md  drift_coverage_matrix.md  session-audit-019d8f6f.md
hooks/: session-start
openspec/: config.yaml
runtime/: AGENTS.md
scripts/: build_anti_drift_release_artifact.py  build_data_ready_from_mandate.py  build_eval_prompt.py  build_mandate_from_intake.py  build_signal_ready_from_data_ready.py  evaluate_classification.py  export_anti_drift_snapshots.py  export_stage_summary_html.py  gen_codex_stage_review_skills.py  render_anti_drift_nightly_report.py  run_research_session.py  run_stage_display.py  run_stage_review.py  run_verification_tier.py  scaffold_idea_intake.py  update_review_governance_candidates.py
skills/: AGENTS.md
tests/: AGENTS.md  README.md  lineage_program_support.py  skill_test_utils.py  test_adversarial_review_runtime.py  test_adversarial_review_skill_generation.py  test_agents_layout.py  test_anti_drift.py  test_anti_drift_baseline.py  test_anti_drift_metamorphic.py  test_anti_drift_replay.py  test_author_skill_comment_contracts.py  test_backtest_runtime.py  test_build_anti_drift_gate_summary.py  test_build_anti_drift_release_artifact.py  test_ci_workflows.py  (+60 more)
(+1179 files in other folders)
