[project]
name = "quant-research-os"
version = "0.4.11"
description = "Agentic stage-gated governance framework for quantitative research workflows"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "pyarrow>=20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
